# FreeDcpPlayer

./: README.md
licences.txt/: LICENSE NVJPEG2k.txt  License FreeDcpPlayer.txt  License Openjpeg.txt
src/RunDcpPlayer_wx/: RunDcpPlayer_wx.sln  readme.md
src/RunDcpPlayer_wx/RunDcpPlayer_wx/: CDcpParse.cpp  CDcpParse.h  Makefile  Run.cpp  Run.h  RunDcpDlg.cpp  RunDcpDlg.h  RunDcpPlayer_wx.cpp  RunDcpPlayer_wx.vcxproj  RunDcpPlayer_wx.vcxproj.filters  targetver.h
src/RunMyDcpPlayer/: RunMyDcpPlayer.sln  readme
src/RunMyDcpPlayer/RunMyDcpPlayer/: CDcpParse.cpp  CDcpParse.h  RunMyDcpPlayer.aps  RunMyDcpPlayer.cpp  RunMyDcpPlayer.h  RunMyDcpPlayer.rc  RunMyDcpPlayer.vcxproj  RunMyDcpPlayer.vcxproj.filters  RunMyDcpPlayerDlg.cpp  RunMyDcpPlayerDlg.h  framework.h  pugixml.cpp  resource.h  targetver.h
src/RunMyDcpPlayer/RunMyDcpPlayer/res/: RunMyDcpPlayer.rc2
src/freedcpplayer/: CMakeLists.txt  FreeDcpPlayer.sln  readme
src/freedcpplayer/Cudaj2k/: CDcpParse.cpp  CDcpParse.h  CPlayer.cpp  CPlayer.h  CommandOptions.h  Cudaj2k.vcxproj  FreeDcpPlayer.h  Makefile  Run.cpp  Run.h  RunDcpDlg.cpp  RunDcpDlg.h  RunDcpPlayer_wx.cpp  freedcpplayer.cpp
src/freedcpplayer/Libasdcp/: libkumu.lib  readme
